# OpenPolicyStack

./: .gitignore  ADRIAN_CON_THESIS_SCOPE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PORTFOLIO_CASE_STUDY.md  README.md  SECURITY.md  cnect_monitor.py  compose.yaml  data_sourcing.py  data_utils.py  test_teams_message.py  workflow_settings.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: ci.yml
api/: openapi.yaml
deploy/: README.md  compose.target-skeleton.yaml
docs/: contacts.md  data_delivering.md  data_processing.md  data_sourcing.md  efmo_flow.md  future.md  hardware.md
metabase/: docker-compose.yml
metabase/data/: info.md
metabase/metabase-app-data/: info.md
modules/: README.md
modules/dr-anticorruption/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
modules/dr-anticorruption/config/: config.yaml
modules/dr-anticorruption/src/: cli.py  scheduler.py
modules/dr-anticorruption/src/api/: main.py
modules/dr-anticorruption/src/api/api/: main.py
modules/dr-anticorruption/src/config/: config.py
modules/dr-anticorruption/src/core/: blockchain.py  download_nomina.py  entity_extractor.py  ingestion.py  inspect_map.py  inspect_portal.py  news_demo.py  payroll_integration.py  pep_analyzer.py  pipeline.py  probe_api.py  risk_engine.py  risk_pipeline.py  risk_service.py  scraper.py  social_analyzer.py
modules/dr-anticorruption/src/data/: data_manager.py  database.py  migrate.py  models.py  postgres.py  s3_manager.py
modules/dr-anticorruption/src/tests/: test_risk.py
(+174 files in other folders)
